修改后台的编辑器页面

--- a/public/html/ckeditor.html
+++ b/public/html/ckeditor.html
@@ -2,3 +2,39 @@
 <div class="col-12">
     <textarea name="ck" id="ck" cols="30" class="ckeditor" rows="10"></textarea>
 </div>
+<div>
+    <h4>高级选项</h4>
+    <div>
+        <h5>分类</h5>
+        <div class="brick-inline-wrapper">
+            <div class="brick-inline-item">
+                <input type="checkbox" name="category"  id="1">
+                <label for="1">canvas</label>
+            </div>
+            <div class="brick-inline-item">
+                <input type="checkbox" name="category"  id="2">
+                <label for="2">canvasxxx</label>
+            </div>
+            <div class="brick-inline-item">
+                <input type="checkbox" name="category"  id="3">
+                <label for="3">canvaxxxxxxxxxxxxxxxxxxxxxxxxxxs</label>
+            </div>
+            <div class="brick-inline-item">
+                <input type="checkbox" name="category">
+                <label for="">canvas</label>
+            </div>
+            <div class="brick-inline-item">
+                <input type="checkbox" name="category">
+                <label for="">canvasxxx</label>
+            </div>
+            <div class="brick-inline-item">
+                <input type="checkbox" name="category">
+                <label for="">canvaxxxxxxxxxxxxxxxxxxxxxxxxxxs</label>
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+    <button class="btn btn-main-pur">提交</button>
+    <button class="btn btn-main-pur">保存草稿</button>
+</div>
